@@ -2,30 +2,30 @@ package tgs.vote.adapter.out;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-import tgs.vote.adapter.model.persistence.user.SlackMember;
+import tgs.vote.adapter.mapper.UserMapper;
 import tgs.vote.adapter.model.persistence.user.UserEntity;
 import tgs.vote.adapter.out.persistance.UserJpaRepository;
+import tgs.vote.application.out.UserPort;
+import tgs.vote.domain.user.User;
 
-
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class UserAdapter {
+public class UserAdapter implements UserPort {
     private final SlackAdapter slackAdapter;
+    private final UserMapper userMapper;
     private final UserJpaRepository userJpaRepository;
 
-    public List<UserEntity> mapSlackUserListToUserEntityList() throws Exception {
-        List<SlackMember> slackMemberList = slackAdapter.getSlackUserMemberList();
-        return slackMemberList.stream()
-                .map(UserEntity::from)
-                .collect(Collectors.toList());
+    public List<UserEntity> getUserEntity() throws Exception {
+        return slackAdapter.getSlackUserList().stream()
+                .map(UserEntity::from).toList();
     }
 
-    public void saveUserList(List<UserEntity> userEntityList) {
-        userJpaRepository.saveAll(userEntityList);
+    @Override
+    public User save(User user) {
+        UserEntity entity = userMapper.toUserEntity(user);
+        userJpaRepository.save(entity);
+        return userMapper.toUser(entity);
     }
-
 }
